Add MQTTS support

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@
 
 # MQTT connection URI
 MQTT_URI=mqtt://root:toor@0.0.0.0
+
+# Optionally, path to CA certificate to use relatively to repo's root
+# MQTT_CA_PATH=/etc/ssl/mqtt.ca.pem
