--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "author": "B4CKSP4CE Team & Contributors <info@0x08.in>",
   "license": "MIT",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "lint": "npx eslint src"
   },
   "dependencies": {
     "debug": "^4.3.3",
     "dmxnet": "^0.8.0",
     "dotenv": "^16.0.0",
     "mqtt": "^4.3.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
   }
 }
